namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-grpc-example
  labels:
    name: envoy-grpc-example
