service.yml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-service
  namespace: envoy-grpc-example
spec:
  clusterIP: None
  selector:
    app: grpc-server
  ports:
    - name: grpc
      port: 15001
      targetPort: 15001
      protocol: TCP
